--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ form input, form button {
     font-size: 2rem;
     border: none;
     background-color: white;
+    color: rgb(1, 29, 29);
 }
 
 form button {
