--- a/style.css
+++ b/style.css
@@ -91,3 +91,8 @@ form button:hover {
     opacity: 0.5;
     
 }
+
+.delet-tr {
+    transform: translateY(8rem) rotateZ(20deg);
+    opacity: 0;
+}
