--- a/style.css
+++ b/style.css
@@ -5,9 +5,40 @@
 
 }
 body{
-    background-image: linear-gradient(40deg,rgb(1, 29, 29), black);
+    background-image: linear-gradient(60deg,black, rgb(1, 29, 29));
     color: white;
     font-family: "Poppins", sans-serif;
     min-height: 100vh;
     
+}
+
+header {
+    font-size: 1.5rem;
+}
+
+header,
+form {
+    min-height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+form input, form button {
+    padding: 0.5rem;
+    font-size: 2rem;
+    border: none;
+    background-color: white;
+}
+
+form button {
+    color: rgb(1, 29, 29);
+    background-color: white;
+    cursor: pointer;
+    transition: all 0.15s ease;
+}
+
+form button:hover {
+    color: white;
+    background-color:rgb(1, 29, 29) ;
 }
