--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ form button:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transition: all 0.5s ease;
 }
 
 .todo li {
@@ -83,4 +84,10 @@ form button:hover {
 }
 .todo-item {
     padding: 0rem 0.5rem;
+}
+
+.line-check {
+    text-decoration: line-through;
+    opacity: 0.5;
+    
 }
