--- a/style.css
+++ b/style.css
@@ -49,3 +49,35 @@ form button:hover {
     justify-content: center;
     align-items: center;
 }
+
+.todo-list {
+    min-width: 30%;
+    list-style: none;
+}
+
+.todo {
+    margin: 0.5rem;
+    background-color: white;
+    color:rgb(1, 29, 29) ;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.todo li {
+    flex: 1;
+}
+
+.check-btn, .delete-btn {
+    background-color: brown;
+    color: white;
+    border: none;
+    padding: 1rem;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.check-btn {
+    background-color: rgb(28, 47, 47);
+}
