--- a/style.css
+++ b/style.css
@@ -24,6 +24,20 @@ form {
     align-items: center;
 }
 
+@media screen and (max-width:600px) {
+    body {
+        background-image: linear-gradient(120deg,black, rgb(1, 29, 29));
+        min-height: 50vh;
+    }
+    header {
+        font-size: 1.2rem;
+    }
+    header, 
+    form {
+        min-height: 12vh;
+    }
+}
+
 form input, form button {
     padding: 0.5rem;
     font-size: 2rem;
@@ -37,6 +51,13 @@ form button {
     background-color: white;
     cursor: pointer;
     transition: all 0.15s ease;
+}
+
+@media screen and (max-width:600px) {
+    form input, form button {
+        padding: 0.3rem;
+        font-size: 1.5rem;
+    }
 }
 
 form button:hover {
